traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:19: error: type mismatch;
 found   : Unit
 required: Int
  while (!estFaceMur()) {
  ^