traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur():Int = {
  var h=0
  droite()
  droite()
  while (!estFaceMur()) {
    avance()
    h=h+1
  }
	droite()
  droite()
  setPos(0, 0)
  return h

}


def getMondeLargeur():Int = {
  var l=0
  droite()
  while (!estFaceMur()) {
    avance()
    l=l+1
  gauche()
  setPos(0, 0)
  return l
  
}}

def colonne() {
	
}







override def run() {
}